Feature Request 44915: Allow QC folder imports that add or remove peptides/molecules (#496)